<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/modul1" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_comment_black_24dp"
            android:title="@string/modul2" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_phone_android_black_24dp"
            android:title="@string/modul3" />
        <item
            android:id="@+id/nav_fourth_fragment"
            android:icon="@drawable/ic_clear_all_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_fifth_fragment"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/imp" />
    </group>
</menu>